<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_ingredieng"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="hu.hubasky.gastromanager.EditIngredientActivity">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="20sp"
            android:text="@string/default_data"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/ingredient_name"/>

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_ingredient_name"
            android:hint="@string/write_ingredient_name"
            android:inputType="textShortMessage"
            android:padding="8dp"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/unit_type"/>

        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@id/edit_ingredient_unit_type_spinner"
            android:entries="@array/unit_types"
            />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/unit_in_gramms"/>

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_ingredient_reference_g"
            android:inputType="numberDecimal|textShortMessage"
            android:text="100"
            android:padding="8dp"/>


        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:text="@string/ingredient_details"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/protein_content"/>

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_ingredient_protein_percent"
            android:inputType="numberDecimal|textShortMessage"
            android:text="0.0"
            android:padding="8dp"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/fat_content"/>

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_ingredient_fat_percent"
            android:inputType="numberDecimal|textShortMessage"
            android:text="0.0"
            android:padding="8dp"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/carbo_content"/>

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_ingredient_carbo_percent"
            android:inputType="numberDecimal|textShortMessage"
            android:text="0.0"
            android:padding="8dp"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/energy_content"/>

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_ingredient_energy_content"
            android:inputType="numberDecimal|textShortMessage"
            android:text="0.0"
            android:padding="8dp"
            android:layout_marginBottom="16dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@id/edit_ingredient_cancel_button"
                android:text="@string/cancel_button_text"/>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@id/edit_ingredient_ok_button"
                android:text="@string/save_button_text"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

    </LinearLayout>
</ScrollView>
