<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_reciepe"
    tools:context="hu.hubasky.gastromanager.EditReciepeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/edit_reciepe_ingredients_list"
            android:background="@color/listBackground"
            android:layout_marginBottom="16dp"
            android:divider="@color/transparent"/>

        <android.support.v7.widget.AppCompatButton
            android:text="@string/delete_ingredient_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_reciepe_ingredients_list"
            android:id="@+id/edit_reciepe_delete_ingredient" />

        <android.support.v7.widget.AppCompatButton
            android:text="@string/add_ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_reciepe_add_ingredient"
            android:layout_alignRight="@id/edit_reciepe_ingredients_list"
            android:layout_below="@+id/edit_reciepe_ingredients_list"/>

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_reciepe_description_hint_text"
            android:inputType="textCapSentences|textMultiLine|text"
            android:background="@color/listBackground"
            android:padding="8dp"
            android:id="@+id/edit_reciepe_description_text"
            android:layout_below="@+id/edit_reciepe_add_ingredient"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <android.support.v7.widget.AppCompatButton
            android:text="@string/cancel_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_reciepe_description_text"
            android:id="@+id/edit_reciepe_cancel_button" />

        <android.support.v7.widget.AppCompatButton
            android:text="@string/save_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_reciepe_save_button"
            android:layout_alignRight="@id/edit_reciepe_ingredients_list"
            android:layout_below="@+id/edit_reciepe_description_text"/>

    </RelativeLayout>
</ScrollView>

